samples/_failures_safe/1761540604_b49ca1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_deae9e62.c: In function ‘main’:
./samples/SAFE/__tmp_deae9e62.c:146:5: error: expected declaration or statement at end of input
  146 |     print_matrix(result_rows, result_cols, result);
      |     ^~~~~~~~~~~~
